<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <EditTextPreference
        app:defaultValue="@string/pref_search_default"
        android:inputType="text"
        app:key="@string/pref_search_key"
        android:singleLine="true"
        app:title="@string/pref_search_level" />

    <ListPreference
        app:defaultValue="@string/pref_country"
        app:entries="@array/pref_country_label"
        app:entryValues="@array/pref_country_value"
        app:key="@string/pref_country_key"
        app:title="@string/pref_country_by_title" />

    <ListPreference
        app:defaultValue="@string/pref_sort_by_everything"
        app:entries="@array/pref_sort_by_option"
        app:entryValues="@array/pref_sort_by_value"
        app:key="@string/pref_sort_by_key"
        app:title="@string/pref_sort_by_title" />

</PreferenceScreen>